external-crates/move/crates/move-compiler/tests/move_2024/parser/named_struct_with_positional_fields.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/named_struct_with_positional_fields.move:3:26
  │
3 │     public struct Foo{u64, u16} has copy, drop;
  │                          ^
  │                          │
  │                          Unexpected ','
  │                          Expected ':'

error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/named_struct_with_positional_fields.move:3:31
  │
3 │     public struct Foo{u64, u16} has copy, drop;
  │                               ^
  │                               │
  │                               Unexpected '}'
  │                               Expected ':'
